<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_secret_questions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_selector"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zakramlock.SecretQuestions">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RadioGroup
                android:id="@+id/radioSqList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/q1"
                >

                <RadioButton
                    android:id="@+id/q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1" />

                <RadioButton
                    android:id="@+id/q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2" />

                <RadioButton
                    android:id="@+id/q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3" />
                <RadioButton
                    android:id="@+id/q4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4" />
                <RadioButton
                    android:id="@+id/q5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5" />
                <RadioButton
                    android:id="@+id/q6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question6" />
                <RadioButton
                    android:id="@+id/q7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question7" />
                <RadioButton
                    android:id="@+id/q8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question8" />
                <RadioButton
                    android:id="@+id/q9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question9" />
                <RadioButton
                    android:id="@+id/q10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question10" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/response"
                android:layout_width="306dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_height="60dp">

                <EditText
                    android:id="@+id/answer"
                    android:layout_width="306dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_height="match_parent" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                style="?attr/alp_42447968_button_bar_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_cancel"
                    style="?attr/alp_42447968_button_bar_button_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@android:string/cancel"
                    android:textColor="@color/black_blue"
                    />

                <Button
                    android:id="@+id/button_confirm"
                    style="?attr/alp_42447968_button_bar_button_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black_blue"
                    android:background="@android:color/transparent"
                    android:text="@string/alp_42447968_cmd_continue"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
