<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_selector"
    android:layout_height="match_parent"
    tools:context=".haibison.android.lockpattern.LockPatternActivity">

    <TextView
        android:id="@+id/alp_42447968_textview_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"

        android:textStyle="bold"
        android:textColor="@color/color_pin_status_text"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/patt"
        android:orientation="vertical" >
        <com.zakramlock.haibison.android.lockpattern.widget.LockPatternView
            android:id="@+id/alp_42447968_view_lock_pattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>

            <Button
                android:id="@+id/button_recovery_pattern"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:enabled="true"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black_blue"
                android:layout_marginBottom="2dp"
                android:layout_above="@+id/adView"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:text="@string/recovery_msg"/>

    <include layout="@layout/alp_42447968_view_group_progress_bar"/>

    <com.google.android.gms.ads.NativeExpressAdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        ads:adUnitId="@string/ads_id"
        ads:adSize="FULL_WIDTHx150"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
    </com.google.android.gms.ads.NativeExpressAdView>

    <LinearLayout
        android:id="@+id/alp_42447968_viewgroup_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginBottom="2dp"
        android:layout_above="@+id/adView"
        android:layout_alignParentEnd="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/alp_42447968_separator_size"/>

        <LinearLayout
            style="?attr/alp_42447968_button_bar_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/alp_42447968_button_cancel"
                style="?attr/alp_42447968_button_bar_button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@android:string/cancel"
                android:textColor="@color/black_blue"
                android:visibility="gone"/>
            <Button
                android:id="@+id/alp_42447968_button_confirm"
                style="?attr/alp_42447968_button_bar_button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:textColor="@color/black_blue"
                android:background="@android:color/transparent"
                android:text="@string/alp_42447968_cmd_continue"/>
        </LinearLayout>
      </LinearLayout>
</RelativeLayout>